tests/compile-fail/never_say_never.stderr
error: Undefined Behavior: entering unreachable code
  --> $DIR/never_say_never.rs:10:9
   |
10 |         *(y as *const _ as *const !)  //~ ERROR entering unreachable code
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ entering unreachable code
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/never_say_never.rs:10:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

